AC_INIT([outoftune],
        [0.0.1],
        [demfuhlseine-mail@gmx.de])

AM_INIT_AUTOMAKE([-Wall -Werror foreign no-dependencies subdir-objects])
AC_CONFIG_HEADER([config.h])
AC_CONFIG_MACRO_DIR([m4])
AC_PROG_CC
AC_LANG(C)
AM_PROG_AR

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([src/Makefile])

AC_OUTPUT
